--- a/src/main/resources/static/css/km/selectitem.css
+++ b/src/main/resources/static/css/km/selectitem.css
@@ -740,8 +740,11 @@ section
 .scrolltable {
 	table-layout: fixed;
 	border-collapse: collapse;
-	border-left: 1px solid #ddd;
+	/* border-left: 1px solid #ddd;
 	border-bottom: 1px solid #ddd;
+	border-right: 1px solid #ddd; */
+	border : 1px solid #ddd;
+	border-top: none;
 }
 
 /* 행 장식 */
