--- a/src/main/resources/templates/gr/customer/myaccountdrop.html
+++ b/src/main/resources/templates/gr/customer/myaccountdrop.html
@@ -482,7 +482,7 @@
                 <div class="info">
                     <span class="member-icon"><img th:src="@{/images/gr/membericon.png}" width="100px" height="100px"></span>
                     <div class="content">
-                        <a>00님 전체 공구 참여 횟수 </a><a th:text="${ret}"></a><a>건 입니다.</a>
+                        <a th:text="${user.nickname}"></a><a>님 전체 공구 참여 횟수 </a><a th:text="${ret}"></a><a>건 입니다.</a>
                     </div>
                 </div>
             </div>
