--- a/src/main/resources/templates/se/customer/kakaojoin.html
+++ b/src/main/resources/templates/se/customer/kakaojoin.html
@@ -15,6 +15,137 @@
     <script th:src="@{/js/bootstrap.min.js}"></script>
     <!-- axios (https://cdnjs.com/libraries/axios) -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.3.5/axios.min.js" integrity="sha512-nnNHpffPSgINrsR8ZAIgFUIMexORL5tPwsfktOTxVYSv+AUAILuFYWES8IHl+hhIhpFGlKvWFiz9ZEusrPcSBQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <style>
+        /* 언니짱 */
+        ul{
+            list-style: none;
+         }
+
+         /* 마이페이지 글자 */
+         .myPageHeader{
+            padding-top: 20px;
+            text-align: center;
+         }
+         
+         .myPageHeader .title{
+            text-decoration: none;
+            font-weight: lighter;
+            color: black;
+            font-size: 40px;
+            text-align: center;
+         }
+
+         .myPageHeader .semi-title{
+            text-decoration: none;
+            color: black;
+         }
+
+         .myPageHeader .semi-title li{
+            text-align: center;
+         }
+
+         #semi-titlebox{
+            width: 100%;
+            text-align: center;
+         }
+
+
+         /* 마이페이지 메뉴 */
+         #semi-titlebox{
+            list-style: none;
+         }
+
+         #submenu {
+            margin-bottom: 40px;
+         }
+
+         #submenu .submenu-header{
+            width: 100%;
+            min-width: 1240px;
+            height: 45px;
+            background-color: #e9eeea;
+            border-top: 1px solid #D0DFD3;
+            border-bottom: 1px solid #D0DFD3;
+         }
+
+         #submenu .submenu-header ul{
+            /* width: 622px; */
+            margin-left: 0;
+            padding-left: 0;
+         }
+
+         #submenu .submenu-header ul li:first-child{
+            width: 210px;
+         }
+
+         #submenu .submenu-header ul li{
+            list-style-type: none;
+            width: 206px;
+            text-align: center;
+            float: left;
+            position: relative;
+            line-height: 45px;
+            display: list-item;
+         }
+
+         #submenu .submenu-header ul li.active{
+            background-color: #6D9275;
+         }
+
+         #submenu .submenu-header ul li.active a{
+            color: #fff;
+         }
+
+         #submenu .submenu-header ul li a{
+            text-decoration: none;
+            color: #333;
+            font-size: 16px;
+            vertical-align: middle; 
+            font-weight: normal;
+        }
+        /* 언니짱 */
+
+        .kakaoJoinInput {
+            margin-bottom: 15px;
+            padding: 0 10px 0 10px;
+            width: 400px;
+            height: 35px;
+            outline: none;
+        }
+
+        .findAddr {
+            margin-bottom: 15px;
+            padding: 0 10px 0 10px;
+            width: 200px;
+            height: 35px;
+            outline: none;
+            background-color: #6D9275;
+            color: white;
+            border: none;
+        }
+
+        .findAddr1 {
+            margin-bottom: 15px;
+            padding: 0 10px 0 10px;
+            width: 200px;
+            height: 35px;
+            outline: none;
+        }
+
+        .kakaoJoinBtn {
+            background-color: #6D9275;
+            color: white;
+            border: none;
+        }
+
+        .endline {
+            margin-top: 60px;
+            width: 1500px;
+            border-top: 1px solid #e5e5e5;
+        }
+
+
+    </style>
 </head>
 
 <body>
@@ -22,11 +153,44 @@
     <th:block th:replace="~{/se/customer/header :: headerHTML}"></th:block>
     
     <!-- 본문 영역 (padding-bottom은 건들면 안돼요ㅠㅠ footer랑 겹치는 문제 해결용임돵) -->
-    <div style="padding-bottom: 300px;">
-        <div class="container">
+    <div style="padding-bottom: 400px;">
+
+        <div class="myPageHeader">
+            <a href="/SOBUN/customer/login.do" class="title">LOGIN</a><br/>
+
+            <ol id="semi-titlebox">
+                <li style="padding-top: 13px; padding-bottom: 20px;">
+                    <a th:href="@{/customer/login.do}" class="semi-title">로그인</a>
+                    &nbsp;&nbsp;>&nbsp;&nbsp;
+                    <a th:href="@{/customer/kakaojoinaction.do}" class="semi-title">카카오톡 회원가입</a>
+                    &nbsp;&nbsp;>&nbsp;&nbsp;
+                </li>
+            </ol>
+        </div>
+
+        <div id="submenu">
+            <div class="submenu-header d-flex justify-content-center">
+                <ul>
+                    <li>
+                        <a th:href="@{/customer/login.do}">로그인</a>
+                    </li>
+                    <li>
+                        <a th:href="@{/customer/findid.do}">아이디찾기</a>
+                    </li>
+                    <li>
+                        <a th:href="@{/customer/findpw.do}">비밀번호찾기</a>
+                    </li>
+                    <li class="active">
+                        <a th:href="@{/customer/join.do}">카카오톡 회원가입</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="container text-center">
             <form th:action="@{/customer/kakaojoinaction.do}" method="post" id="kakaojoinForm"><br>
-                <input type="text" name="name" placeholder="이름" value="이름"><br>
-                <input type="tel" name="phone" placeholder="연락처" value="01053535353"><br>
+                <input class="kakaoJoinInput" type="text" name="name" placeholder="이름" value="이름"><br>
+                <input class="kakaoJoinInput mb-5" type="tel" name="phone" placeholder="연락처" value="01053535353"><br>
 
                 <input type="hidden" name="id" placeholder="아이디" th:value="${customer.id}">
                 <input type="hidden" name="email" placeholder="이메일" th:value="${customer.email}">
@@ -34,16 +198,19 @@
                 <input type="hidden" name="gender" placeholder="성별" th:value="${customer.gender}">
 
                 <!-- 주소 -->
-                <input type="button" onclick="sample6_execDaumPostcode()" value="내주소 찾기">
-                <input type="text" name="postcode" id="sample6_postcode" placeholder="우편번호" readonly>
-                <input type="text" name="address1" id="sample6_address" placeholder="주소" readonly>
-                <input type="text" name="address2" id="sample6_detailAddress" placeholder="상세주소">
-                <input type="text" name="address3" id="sample6_extraAddress" placeholder="추가정보">
+                <input class="findAddr1"  type="text" name="postcode" id="sample6_postcode" placeholder="우편번호" readonly>
+                <input class="findAddr"  type="button" onclick="sample6_execDaumPostcode()" value="내주소 찾기"><br>
+                <input class="kakaoJoinInput"  type="text" name="address1" id="sample6_address" placeholder="주소" readonly><br>
+                <input class="kakaoJoinInput"  type="text" name="address2" id="sample6_detailAddress" placeholder="상세주소"><br>
+                <input class="kakaoJoinInput"  type="text" name="address3" id="sample6_extraAddress" placeholder="추가정보"><br>
                 <input type="hidden" name="latitude" id="latitude">
                 <input type="hidden" name="longitude" id="longitude">
                 <!-- 주소 -->
 
-                <button type="button" onclick="joinAction()">회원가입</button>
+                <button class="kakaoJoinInput kakaoJoinBtn" type="button" onclick="joinAction()">회원가입</button>
+                <div class="d-flex justify-content-center">
+                    <div class="endline"></div>
+                </div>
             </form>
         </div>
     </div>
