--- a/src/main/resources/templates/mj/seller/itemimage/selectlist.html
+++ b/src/main/resources/templates/mj/seller/itemimage/selectlist.html
@@ -45,37 +45,55 @@
                     물품명: <label th:text="${item.name}"></label>
                     <hr>
 
-                    대표이미지
+                    <h4>대표이미지</h4>
+                    
                     <div>
-
                         <img th:src="${item.imageUrl}"  class="mainimage"> <br>
-                        <div class="modal">
-                            <span class="close">&times;</span>
-                            <img class="modal_content" id="img01">
-                          </div>
                     </div>
+
                     <form th:action="@{/seller/itemimage/insertimage.do(image=0)}" method="post" enctype="multipart/form-data">
                         <input type="hidden" name="item.no" th:value="${item.no}" /><br>
                         <input type="file" name="tmpFile" accept="image/*"/><br>
                         <input type="submit" value="이미지업로드" />
                     </form>
                     <hr>
-
-                    상세이미지
+<!-- ===================================================================================================================== -->
+                    <h4>상세이미지</h4>
                     <form th:action="@{/seller/itemimage/deleteimage.do}" method="post">
-                        <input type="submit" value="선택삭제">
+                        <button class="btn btn-outline-danger" type="submit">선택삭제</button>
+                        <!-- <input type="submit" value="선택삭제"> -->
                         <div th:each="tmp : ${imageList}">
                             <input type="hidden" name="item.no" th:value="${item.no}" /><br>
                             <input type="checkbox" name="imageno" th:value="${tmp[0]}" >
                             <label>[[${tmp[0]}]]</label>
                             <img th:src="${tmp[1]}" class="detailimage">
                         </div>
+
+                        <table class="table">
+                            <thead>
+                                <tr>
+                                    <th><input type="hidden" value="물품번호" /></th>
+                                    <th>선택</th>
+                                    <th>이미지번호</th>
+                                    <th>이미지</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr th:each="tmp : ${imageList}">
+                                    <td><input type="hidden" name="item.no" th:value="${item.no}" /></td>
+                                    <td><input type="checkbox" name="imageno" th:value="${tmp[0]}" ></td>
+                                    <td><label>[[${tmp[0]}]]</label></td>
+                                    <td><img th:src="${tmp[1]}" class="detailimage"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+
                     </form>
 
-                    <h3>이미지등록</h3>
+
                     <form th:action="@{/seller/itemimage/insertimage.do(image=1)}" method="post" enctype="multipart/form-data">
                         <input type="hidden" name="item.no" th:value="${item.no}" /><br>
-                        <input type="file" name="tmpFile[]" accept="image/*"/><br>
+                        <input multiple="multiple" type="file" name="tmpFile[]" accept="image/*"/><br>
                         <input type="submit" value="이미지업로드" />
                     </form>
 
