--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -373,9 +373,19 @@ ul {
 }
 
 #layoutError_404 {
-
     width: 350px;
     height: 350px;
-
-
 }
+
+.modal {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    display: none;
+
+    background-color: rgba(0, 0, 0, 0.4);
+  }  
