--- a/src/main/resources/templates/ikh/seller/delivery/search.html
+++ b/src/main/resources/templates/ikh/seller/delivery/search.html
@@ -155,16 +155,20 @@
 
                             <form th:action="@{/seller/delivery/search.do}" method="get">
                                 <div class="row" style ="border: 2px solid rgb(229, 229, 229); background-color: rgb(243,245,247);">
-                                    검색어<hr/>
-                                    물품코드 <input type="number" name="itemcode" placeholder="물품코드 입력" />
-                                    물품이름 <input type="text" name="itemname" placeholder="물품이름 입력" />
-                                    주소 <input type="text" name="address" placeholder="주소 입력" />
-                                    공구주문번호 <input type="number" name="purchaseno" placeholder="공구주문번호 입력" />
+                                    <div style="display: inline-block;">
+                                        검색어<hr/>
+                                        물품코드 <input type="number" name="itemcode" placeholder="물품코드 입력" />
+                                        물품이름 <input type="text" name="itemname" placeholder="물품이름 입력" />
+                                        주소 <input type="text" name="address" placeholder="주소 입력" />
+                                        공구주문번호 <input type="number" name="purchaseno" placeholder="공구주문번호 입력" />
+                                    </div>
                                 </div>
 
                                 <div class="row" style ="border: 2px solid rgb(229, 229, 229); border-top-width: 0px; background-color: rgb(243,245,247);">                                                                        
                                     배송상태<hr/>
-                                    <input type="radio" th:each="obj : ${statuslist}" name="status" th:text="${obj.status}" th:value="${obj.no}"/>
+                                    <div style="display: inline-block;">
+                                        <input type="radio" th:each="obj : ${statuslist}" name="status" th:text="${obj.status}" th:value="${obj.no}"/>
+                                    </div>
                                 </div>
 
                                 <!-- <div class="row" style ="border: 2px solid rgb(229, 229, 229); border-top-width: 0px; background-color: rgb(243,245,247);">
@@ -191,10 +195,12 @@
 
                                 <div class="row" style ="border: 2px solid rgb(229, 229, 229); border-top-width: 0px; background-color: rgb(243,245,247);">                                    
                                     <h6 style="display: inline;">기간</h6>
+                                    <div style="display: inline-block;">
                                     <!-- script -->
                                     <input type="date" id="fd" th:min="${sdate}" name="firstdate" th:onchange="firstdatechange()"/>
                                     &nbsp;~&nbsp;
                                     <input type="date" id="sd" min="" th:max="${today}" name="seconddate" th:onchange="seconddatechange()"/>                                   
+                                    </div>
                                 </div>                                
 
                                 <div class="row" style ="border: 2px solid rgb(229, 229, 229); border-top-width: 0px; background-color: rgb(243,245,247);">
@@ -203,8 +209,7 @@
                                         <button type="submit" class="btn btn-outline-primary">검색</button>
                                     </div>
                                 </div>
-                            </form>
-                            
+                            </form>                            
                         </div>
 
                             <div class="row" style="margin-top: 15px;">
@@ -227,7 +232,7 @@
                                                         <th>중분류코드</th>
                                                         <th>소분류코드</th>                                                        
                                                         <th>공구등록일자</th>
-                                                        <th>배달상태변경</th>
+                                                        <th>배송상태설정</th>
                                                     </tr>
                                                 </thead>
                                                 <tfoot>
@@ -241,15 +246,15 @@
                                                         <th>중분류코드</th>
                                                         <th>소분류코드</th>                                                        
                                                         <th>공구등록일자</th>
-                                                        <th>배달상태변경</th>
+                                                        <th>배송상태설정</th>
                                                     </tr>
                                                 </tfoot>
                                                 <tbody>
-                                                    <tr th:each="obj : ${list}">                                                    
+                                                    <tr th:each="obj, iterStat  : ${list}">
                                                         <td th:text="${obj.itemcode}"></td>
                                                         <td th:text="${obj.itemname}"></td>
                                                         <td th:text="${obj.address}"></td>
-                                                        <td th:text="${obj.purchaseno}"></td>                                                        
+                                                        <td th:text="${obj.purchaseno}"></td>                                                                                                           
                                                         <td th:if="${obj.delivery == 0}" th:text="배송전"></td>
                                                         <td th:if="${obj.delivery == 1}" th:text="배송준비중"></td>
                                                         <td th:if="${obj.delivery == 2}" th:text="배송중"></td>
@@ -257,18 +262,22 @@
                                                         <td th:text="${obj.lname}"></td>
                                                         <td th:text="${obj.mname}"></td>
                                                         <td th:text="${obj.sname}"></td>                                                        
-                                                        <td th:text="${#dates.format(obj.regdate, 'yyyy년 MM월 dd일 E요일 HH시 mm분')}"></td>
-                                                        <td>상태변경 들어감</td>
+                                                        <td th:text="${#dates.format(obj.regdate, 'yyyy년 MM월 dd일 E요일 HH시 mm분')}"></td>                                                                                                         
+                                                        <td>
+                                                            <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                                                                th:value="${obj.delivery}" th:attr="id='dvact' + ${iterStat.index}" th:onclick="'dvclick(' + ${iterStat.index} + ')'">
+                                                                변경
+                                                            </button>
+                                                        </td>
                                                     </tr>                                            
                                                 </tbody>
-                                            </table>
+                                            </table>                   
                                         </div>
                                     </div>
                                 </div>
                             </div>
                     </div>
                 </div>
-
             </main>
             <footer class="py-4 bg-light mt-auto">
                 <div class="container-fluid py-5">
@@ -281,6 +290,31 @@
                     </div>
                 </div>
             </footer>
+        </div>
+    </div>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">배송상태설정</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">                                                                            
+                    <div style="display: inline-block; text-align: center;" >
+                        <button type="button" id="btn-0" class="btn btn-outline-primary" data-bs-toggle="button" autocomplete="off" onclick="toggleButton(0)">배송전</button>
+                        <button type="button" id="btn-1" class="btn btn-outline-primary" data-bs-toggle="button" autocomplete="off" onclick="toggleButton(1)">배송준비중</button>
+                        <button type="button" id="btn-2" class="btn btn-outline-primary" data-bs-toggle="button" autocomplete="off" onclick="toggleButton(2)">배송중</button>
+                        <button type="button" id="btn-3" class="btn btn-outline-primary" data-bs-toggle="button" autocomplete="off" onclick="toggleButton(3)">배송완료</button>              
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <form>
+                        <button type="button" class="btn btn-outline-primary" onclick="dvvalue()">변경저장</button>
+                        <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">취소</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -308,40 +342,108 @@
         }
 
     </script> -->
-
-    <!-- 달력 -->
-    <script th:inline="javascript" type="text/javascript">
-
-        function firstdatechange() {
-            var fd = document.getElementById("fd").value;
-            document.getElementById("sd").setAttribute( "min", fd );        
-            console.log(fd);
-        }
-
-        function seconddatechange() {            
-            var sd = document.getElementById("sd").value;            
-            console.log(sd);            
-        }
     
-        $(document).ready(function () {
-            const sidebarToggle = $('#sidebarToggle');
-            if (sidebarToggle) {
-                sidebarToggle.click(function () {
-                    console.log('buttonClick');
-                    event.preventDefault(); /* 아래쪽 요소로 이벤트가 전파되지 않도록 */
-                    document.body.classList.toggle('sb-sidenav-toggled');
-                    localStorage.setItem('sb|sidebar-toggle', document.body.classList.contains('sb-sidenav-toggled'));
-                });
+    <script th:inline="javascript" type="text/javascript">
+    // 모달
+    const myModal = document.getElementById('myModal');
+    const myInput = document.getElementById('myInput');           
+    
+    // 상태들중 하나만 선택되게
+    function toggleButton(selectedButton) {
+        var buttons = document.querySelectorAll('[data-bs-toggle="button"]');
+        buttons.forEach(function(button, index) {
+            if (index === selectedButton) {
+                button.classList.add('active');
+            } else {
+                button.classList.remove('active');
             }
         });
+    }
 
-        $(document).ready(function () {
-            new simpleDatatables.DataTable("#datatablesSimple", {
-                searchable: true,
-                fixedHeight: true,
-            })
-        });
+    // 상태에 따라서 값 보내기
+    function dvvalue(){
+        var bt0 = document.getElementById('btn-0').className;
+        var bt1 = document.getElementById('btn-1').className;
+        var bt2 = document.getElementById('btn-2').className;
+        var bt3 = document.getElementById('btn-3').className;
+        var equals = 'btn btn-outline-primary active';
+        
+        if(bt0 == equals) {
+            console.log(0);
+        }
+        else if(bt1 == equals) {
+            console.log(1);
+        }
+        else if(bt2 == equals) {
+            console.log(2);
+        }
+        else if(bt3 == equals) {
+            console.log(3);
+        }
+    }
+
+    // 배송상태설정 변경
+    function dvclick(index) {
+        var dv = document.getElementById('dvact' + index).value;
+        console.log("상태 : " + dv); 
+
+        // 상태에 맞는 토글 설정
+        if(dv == 0){
+            document.getElementById('btn-0').setAttribute('class', 'btn btn-outline-primary active');
+            document.getElementById('btn-1').setAttribute('class', 'btn btn-outline-primary');
+            document.getElementById('btn-2').setAttribute('class', 'btn btn-outline-primary');
+            document.getElementById('btn-3').setAttribute('class', 'btn btn-outline-primary');
+        }
+        else if(dv == 1){
+            document.getElementById('btn-0').setAttribute('class', 'btn btn-outline-primary');
+            document.getElementById('btn-1').setAttribute('class', 'btn btn-outline-primary active');
+            document.getElementById('btn-2').setAttribute('class', 'btn btn-outline-primary');
+            document.getElementById('btn-3').setAttribute('class', 'btn btn-outline-primary');
+        }
+        else if(dv == 2){
+            document.getElementById('btn-0').setAttribute('class', 'btn btn-outline-primary');
+            document.getElementById('btn-1').setAttribute('class', 'btn btn-outline-primary');
+            document.getElementById('btn-2').setAttribute('class', 'btn btn-outline-primary active');
+            document.getElementById('btn-3').setAttribute('class', 'btn btn-outline-primary');
+        }
+        else if(dv == 3){
+            document.getElementById('btn-0').setAttribute('class', 'btn btn-outline-primary');
+            document.getElementById('btn-1').setAttribute('class', 'btn btn-outline-primary');
+            document.getElementById('btn-2').setAttribute('class', 'btn btn-outline-primary');
+            document.getElementById('btn-3').setAttribute('class', 'btn btn-outline-primary active');                
+        }
+    }    
+        
+    // <!-- 달력 -->    
+    function firstdatechange() {
+        var fd = document.getElementById("fd").value;
+        document.getElementById("sd").setAttribute( "min", fd );        
+        console.log(fd);
+    }
+
+    function seconddatechange() {            
+        var sd = document.getElementById("sd").value;            
+        console.log(sd);            
+    }
+
+    $(document).ready(function () {
+        const sidebarToggle = $('#sidebarToggle');
+        if (sidebarToggle) {
+            sidebarToggle.click(function () {
+                console.log('buttonClick');
+                event.preventDefault(); /* 아래쪽 요소로 이벤트가 전파되지 않도록 */
+                document.body.classList.toggle('sb-sidenav-toggled');
+                localStorage.setItem('sb|sidebar-toggle', document.body.classList.contains('sb-sidenav-toggled'));
+            });
+        }
+    });
+
+    $(document).ready(function () {
+        new simpleDatatables.DataTable("#datatablesSimple", {
+            searchable: true,
+            fixedHeight: true,
+        })
+    });
     </script>
 </body>
-
 </html>
